lox-tests/tests/operator/less_or_equal_nonnum_num.stderr
ERROR: Unsupported operation '<=' between types 'string' and 'number'
 --> 1:1
  |
1 | "1" <= 1; // expect runtime error: Operands must be numbers.
  | ^------^
